[gd_scene load_steps=4 format=3 uid="uid://dhkkggqwalbhb"]

[ext_resource type="Script" path="res://Scripts/Menus/solo_screen.gd" id="1_5irlm"]

[sub_resource type="LabelSettings" id="LabelSettings_ts5vn"]
font_size = 69

[sub_resource type="Theme" id="Theme_738q4"]
default_font_size = 42

[node name="SoloScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5irlm")
metadata/_edit_lock_ = true

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -191.5
offset_top = 45.0
offset_right = 191.5
offset_bottom = 140.0
grow_horizontal = 2
text = "Solo Career"
label_settings = SubResource("LabelSettings_ts5vn")

[node name="Back" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -273.0
offset_top = -33.0
offset_right = -168.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_738q4")
text = "Back"

[node name="Buttons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -118.0
offset_top = -149.0
offset_right = 119.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="NewGame" type="Button" parent="Buttons"]
layout_mode = 2
theme = SubResource("Theme_738q4")
text = "New Game"

[node name="LoadGame" type="Button" parent="Buttons"]
layout_mode = 2
theme = SubResource("Theme_738q4")
text = "Load Game"

[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Buttons/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="Buttons/LoadGame" to="." method="_on_load_game_pressed"]
